# dev-tools-python

./: .dev-hooks.example.yml  .dev-hooks.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
src/dev_tools_hooks/: __init__.py  cli.py  installer.py
src/dev_tools_hooks/hooks/: commit-msg  pre-commit  pre-push
