[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-tools-hooks"
version = "1.0.0"
description = "Git hooks for development workflow - Conventional Commits, PHPCS, and branch naming conventions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Dev Tools", email = "dev@example.com"}
]
keywords = ["git", "hooks", "conventional-commits", "phpcs", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
dev-hooks = "dev_tools_hooks.cli:main"

[project.urls]
Homepage = "https://github.com/dev/dev-tools-hooks"
Repository = "https://github.com/dev/dev-tools-hooks"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dev_tools_hooks = ["hooks/*"]
