[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-tools-hooks"
version = "1.2.0"
description = "Git hooks for development workflow - Conventional Commits, branch naming, and custom commands"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Swapps", email = "dev@swapps.com"}
]
keywords = ["git", "hooks", "conventional-commits", "development", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
dev-hooks = "dev_tools_hooks.cli:main"

[project.urls]
Homepage = "https://github.com/swapps/dev-tools-hooks"
Repository = "https://github.com/swapps/dev-tools-hooks"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dev_tools_hooks = ["hooks/*"]
